# SA-PEF

./: .gitignore  LICENSE  README.md  sapef_env.yml
sapef_main/: pyproject.toml
sapef_main/configs/: figures.yaml
sapef_main/configs/ablations/cifar10_scafcom_top001/: ef.toml  fedavg.toml  saef.toml  sapef.toml  scafcom.toml
sapef_main/configs/ablations/cifar10_scafcom_top010/: ef.toml  fedavg.toml  saef.toml  sapef.toml  scafcom.toml
sapef_main/configs/ablations/mnist_scafcom/: ef.toml  fedavg.toml  sapef.toml  scafcom.toml  scaffold.toml
sapef_main/configs/alpha_sweep/cifar10/: alpha_0_0.toml  alpha_0_1.toml  alpha_0_2.toml  alpha_0_3.toml  alpha_0_4.toml  alpha_0_5.toml  alpha_0_6.toml  alpha_0_7.toml  alpha_0_8.toml  alpha_0_9.toml  alpha_1_0.toml
sapef_main/configs/alpha_sweep/cifar100/: alpha_0_0.toml  alpha_0_1.toml  alpha_0_2.toml  alpha_0_3.toml  alpha_0_4.toml  alpha_0_5.toml  alpha_0_6.toml  alpha_0_7.toml  alpha_0_8.toml  alpha_0_9.toml  alpha_1_0.toml
sapef_main/configs/cifar10/p10_dir05_top001/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/cifar10/p10_dir05_top010/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/cifar10/p50_dir01_top001/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/cifar10/p50_dir01_top010/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/cifar100/p10_dir01_top001/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/cifar100/p10_dir01_top010/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/cifar100/p50_dir01_top001/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/cifar100/p50_dir01_top010/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/femnist/natural_top001/: cser.toml  ef.toml  fedavg.toml  saef.toml  sapef.toml
sapef_main/configs/femnist/patho2_top001/: cser.toml  ef.toml  fedavg.toml  (+2 more)
sapef_main/configs/quick-test/: cser_cifar10_tiny.toml  ef_cifar10_tiny.toml  fedavg_cifar10_tiny.toml  saef_cifar10_tiny.toml  sapef_cifar10_tiny.toml
sapef_main/sapef/: client_app.py  dataset.py  metrics.py  models.py  server.py  server_app.py  utils.py
sapef_main/sapef/compression/: base.py  quantization.py  randk.py  registry.py  signsgd.py  topk.py
sapef_main/sapef/strategies/: cser.py  fedspars.py  scaffold_like.py  strategy_fedvg_straggler.py
sapef_main/scripts/: generate_configs.py  plot_alpha_sweep.py  plot_curves.py  plot_gradient_mismatch.py  plot_utils.py  prefetch_femnist.py  verify_runner.sh
sapef_main/scripts/femnist_plots/: plot_femnist_distribution.py  plot_patho_distribution.py
(+10 files in other folders)
